# trivy-report-parent-vuln-dep-finder

./: .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
notebooks/example_user/: Untitled.ipynb
src/trivy_script_project/: main.py  parser.py  root_dependency_bfs.py  root_dependency_finder.py
src/trivy_script_project/classes/: custom_exception.py
tests/: test_add.py
