[tool.poetry]
name = "trivy_script_project"
version = "0.1.0"
description = ""
authors = ["The Gang Technology"]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
cython = "^3.0.8"
pyinstaller = "^6.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.2"
flake8-annotations = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
